fix overlap metodologia y cajas modulos

--- a/styles/_ruta.scss
+++ b/styles/_ruta.scss
@@ -193,8 +193,11 @@ html #mr-nav {
             margin-top: -3%;
         }
     }
-    .home-ruta #page-header #page-mast #course-toc #chapters li:nth-child(3){
+    .home-ruta #page-header #page-mast #course-toc #chapters li:nth-child(3), .home-ruta #page-header #page-mast #course-toc #chapters li:nth-child(4){
         margin-top:2rem;
+    }
+    .home-ruta #page-header #page-mast .texto-bienvenida{
+        background: #ffffffb0;
     }
 }
 
